# xpower

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  rqmul.cpp  rqmul_enable_ccr.cpp  subs_enable_ccr.cpp  subs_pmu.cpp
bench/xpower/: CMakeLists.txt  crt.cpp  karatsuba.cpp  karatsuba_kara.cpp  lowmul.cpp  main_backward.cpp  main_forward.cpp  main_lay1_bwd_insert.cpp  main_lay1_fwd_extract.cpp  main_lay2_bwd_inplace.cpp  main_lay2_fwd_inplace.cpp  mainmul.cpp  radix2.cpp  rqmul_pmu.cpp  scale_freeze.cpp  schoolbook.cpp
debug/: CMakeLists.txt  rqmul.cpp
debug/include/: print_vec.h
debug/xpower/: CMakeLists.txt  basemul_low_range.cpp  basemul_main_range.cpp  fullmul.cpp  karatsuba.cpp  low_lay1_bwd_insert_range.cpp  low_lay1_fwd_extract_range.cpp  lowmul.cpp  main_karatsuba.cpp  main_lay1_bwd_insert_range.cpp  main_lay1_fwd_extract_range.cpp  main_lay2_bwd_inplace_range.cpp  main_lay2_fwd_inplace_range.cpp  main_radix2.cpp  main_schoolbook.cpp  mainmul.cpp  mla_tmv_8_kara.cpp  ntt5_4x_nof03.cpp  ntt9_2x.cpp  ntt9_2x_h12345678.cpp  ntt9_2x_range.cpp  radix2.cpp  rqmul.cpp  schoolbook.cpp
include/: sntrup761.h
include/shared/interface/: sntrup761.h
include/shared/utils/: gen_consts.h
include/xpower/: basemul.h  consts.h  low_lay1.h  lowmul.h  main_lay1.h  main_lay2.h  mainmul.h  neon_lane_asm.h  rqmul.h  zq_neon.h
scripts/: gen.fish  gen.py  test.fish
scripts/testcases/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
src/: CMakeLists.txt  basemul.cpp  low_lay1.cpp  lowmul.cpp  main_lay1.cpp  main_lay2.cpp  mainmul.cpp  rqmul.cpp
src/inline/: basemul.cpp  low_lay1.cpp  main_lay1.cpp
src/xpower/: CMakeLists.txt  basemul.cpp  low_lay1.cpp  lowmul.cpp  main_lay1.cpp  main_lay2.cpp  mainmul.cpp  rqmul.cpp
src/xpower/inline/: basemul.cpp  low_lay1.cpp  main_lay1.cpp  main_lay2.cpp
test/: CMakeLists.txt
test/include/: ntt_ref.h
test/xpower/: CMakeLists.txt  karatsuba.cpp  karatsuba_kara.cpp  lowmul.cpp  main_karatsuba.cpp  main_karatsuba_kara.cpp  main_lay1_fwd_extract.cpp  main_lay2_fwd_inplace.cpp  main_radix2.cpp  main_radix2_kara.cpp  main_schoolbook.cpp  mainmul.cpp  ntt10_4x.cpp  ntt10_4x_nof3456.cpp  ntt10_4x_nof34567.cpp  ntt10_4x_noh3456.cpp  ntt5_4x_nof023.cpp  ntt5_4x_nof14.cpp  ntt9_2x.cpp  ntt9_2x_h12345678.cpp  radix2.cpp  radix2_kara.cpp  schoolbook.cpp
